// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Let-polymorphism > basic polymorphic let bindings > higher-order polymorphic function 1`] = `
{
  "displays": {
    "constraints": [
      "?2 ~~ Π(x: ?4) -> (closure: (?5 :: Type) -| Γ: x; x; f; apply)",
      "?3 ~~ ?4",
      "Π(f: ?2) -> (closure: Π(x: (?3 :: Type)) -> (?5 :: Type) -| Γ: f; apply) ~~ ?1",
      "Π(y: ?7) -> (closure: (?7 :: Type) -| Γ: y; id; apply) ~~ ?6",
      "?9 @ Type",
      "?10 @ Type",
      "?11 @ Type",
      "Π(y: ?11) -> (closure: a -| Γ: y; a; id; apply) ~~ Π(x: ?9) -> (closure: b -| Γ: x; b; a; apply)",
      "Num ~~ ?9",
      "?10 ~~ ?8",
    ],
    "term": "{
  let apply
    : Π(a: Type) =>
      (closure: Π(b: Type) => Π(f: Π(x: a) -> b) -> Π(x: a) -> b -| Γ: a; apply)
    = λ(a: Type) =>
      λ(b: Type) =>
        (λ(f: Π(x: a) -> b) -> (λ(x: a) -> f x : Π(x: a) -> b) : Π(f: Π(x: a) ->
          b) ->
          Π(x: a) -> b);
  let id
    : Π(a: Type) => (closure: Π(y: a) -> a -| Γ: a; id; apply)
    = λ(a: Type) => (λ(y: a) -> y : Π(y: a) -> a);
  let result : Num = apply @Num @Num (id @Num) 5;
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > basic polymorphic let bindings > polymorphic S combinator 1`] = `
{
  "displays": {
    "constraints": [
      "?2 ~~ Π(x: ?5) -> (closure: (?6 :: Type) -| Γ: x; x; g; f; s)",
      "?4 ~~ ?5",
      "?6 ~~ Π(x: ?7) -> (closure: (?8 :: Type) -| Γ: x; x; g; f; s)",
      "?3 ~~ Π(x: ?9) -> (closure: (?10 :: Type) -| Γ: x; x; g; f; s)",
      "?4 ~~ ?9",
      "?10 ~~ ?7",
      "Π(f: ?2) ->
  (closure: Π(g: (?3 :: Type)) -> Π(x: (?4 :: Type)) -> (?8 :: Type) -| Γ: f; s) ~~ ?1",
      "Π(a: ?12) -> (closure: Π(b: (?13 :: Type)) -> (?12 :: Type) -| Γ: a; const; s) ~~ ?11",
      "Π(n: ?15) -> (closure: (?15 :: Type) -| Γ: n; id; const; s) ~~ ?14",
      "?17 @ Type",
      "?18 @ Type",
      "?19 @ Type",
      "?20 @ Type",
      "?21 @ Type",
      "Π(a: ?20) -> (closure: Π(b: b) -> a -| Γ: a; b; a; const; s) ~~ Π(x: ?17) -> (closure: Π(x: b) -> c -| Γ: x; c; b; a; s)",
      "?22 @ Type",
      "Π(n: ?22) -> (closure: a -| Γ: n; a; id; const; s) ~~ Π(x: ?17) -> (closure: b -| Γ: x; f; c; b; a; s)",
      "Num ~~ ?17",
      "?19 ~~ ?16",
    ],
    "term": "{
  let s
    : Π(a: Type) =>
      (closure: Π(b: Type) =>
        Π(c: Type) =>
          Π(f: Π(x: a) -> Π(x: b) -> c) ->
            Π(g: Π(x: a) -> b) -> Π(x: a) -> c -| Γ: a; s)
    = λ(a: Type) =>
      λ(b: Type) =>
        λ(c: Type) =>
          (λ(f: Π(x: a) -> Π(x: b) -> c) ->
            (λ(g: Π(x: a) -> b) ->
              (λ(x: a) -> f x (g x) : Π(x: a) -> c) : Π(g: Π(x: a) -> b) ->
              Π(x: a) -> c) : Π(f: Π(x: a) -> Π(x: b) -> c) ->
            Π(g: Π(x: a) -> b) -> Π(x: a) -> c);
  let const
    : Π(a: Type) =>
      (closure: Π(b: Type) => Π(a: a) -> Π(b: b) -> a -| Γ: a; const; s)
    = λ(a: Type) =>
      λ(b: Type) =>
        (λ(a: a) -> (λ(b: b) -> a : Π(b: b) -> a) : Π(a: a) -> Π(b: b) -> a);
  let id
    : Π(a: Type) => (closure: Π(n: a) -> a -| Γ: a; id; const; s)
    = λ(a: Type) => (λ(n: a) -> n : Π(n: a) -> a);
  let result : Num = s @Num @Num @Num (const @Num @Num) (id @Num) 42;
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > basic polymorphic let bindings > polymorphic composition (B combinator) 1`] = `
{
  "displays": {
    "constraints": [
      "?2 ~~ Π(x: ?5) -> (closure: (?6 :: Type) -| Γ: x; x; g; f; compose)",
      "?3 ~~ Π(x: ?7) -> (closure: (?8 :: Type) -| Γ: x; x; g; f; compose)",
      "?4 ~~ ?7",
      "?8 ~~ ?5",
      "Π(f: ?2) ->
  (closure: Π(g: (?3 :: Type)) ->
    Π(x: (?4 :: Type)) -> (?6 :: Type) -| Γ: f; compose) ~~ ?1",
      "Π(n: ?10) -> (closure: (?10 :: Type) -| Γ: n; id; compose) ~~ ?9",
      "?12 @ Type",
      "?13 @ Type",
      "?14 @ Type",
      "?15 @ Type",
      "Π(n: ?15) -> (closure: a -| Γ: n; a; id; compose) ~~ Π(x: ?12) -> (closure: b -| Γ: x; c; b; a; compose)",
      "?16 @ Type",
      "Π(n: ?16) -> (closure: a -| Γ: n; a; id; compose) ~~ Π(x: ?14) -> (closure: a -| Γ: x; f; c; b; a; compose)",
      "Π(x: ?14) -> (closure: b -| Γ: x; g; f; c; b; a; compose) ~~ ?11",
    ],
    "term": "{
  let compose
    : Π(a: Type) =>
      (closure: Π(b: Type) =>
        Π(c: Type) =>
          Π(f: Π(x: a) -> b) ->
            Π(g: Π(x: c) -> a) -> Π(x: c) -> b -| Γ: a; compose)
    = λ(a: Type) =>
      λ(b: Type) =>
        λ(c: Type) =>
          (λ(f: Π(x: a) -> b) ->
            (λ(g: Π(x: c) -> a) ->
              (λ(x: c) -> f (g x) : Π(x: c) -> b) : Π(g: Π(x: c) -> a) ->
              Π(x: c) -> b) : Π(f: Π(x: a) -> b) ->
            Π(g: Π(x: c) -> a) -> Π(x: c) -> b);
  let id
    : Π(a: Type) => (closure: Π(n: a) -> a -| Γ: a; id; compose)
    = λ(a: Type) => (λ(n: a) -> n : Π(n: a) -> a);
  let result
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; result; id; compose)
    = λ(a: Type) => id @a @a @a (result @a) (result @a);
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > basic polymorphic let bindings > polymorphic const function (K combinator) 1`] = `
{
  "displays": {
    "constraints": [
      "Π(x: ?2) -> (closure: Π(y: (?3 :: Type)) -> (?2 :: Type) -| Γ: x; const) ~~ ?1",
      "?5 @ Type",
      "?6 @ Type",
      "Num ~~ ?5",
      "Num ~~ ?6",
      "?5 ~~ ?4",
      "?8 @ Type",
      "?9 @ Type",
      "String ~~ ?8",
      "Num ~~ ?9",
      "?8 ~~ ?7",
    ],
    "term": "{
  let const
    : Π(a: Type) =>
      (closure: Π(b: Type) => Π(x: a) -> Π(y: b) -> a -| Γ: a; const)
    = λ(a: Type) =>
      λ(b: Type) =>
        (λ(x: a) -> (λ(y: b) -> x : Π(y: b) -> a) : Π(x: a) -> Π(y: b) -> a);
  let numResult : Num = const @Num @Num 5 42;
  let strResult : String = const @String @Num "kept" 100;
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > basic polymorphic let bindings > polymorphic flip (C combinator) 1`] = `
{
  "displays": {
    "constraints": [
      "?2 ~~ Π(x: ?5) -> (closure: (?6 :: Type) -| Γ: x; y; x; f; flip)",
      "?4 ~~ ?5",
      "?6 ~~ Π(x: ?7) -> (closure: (?8 :: Type) -| Γ: x; y; x; f; flip)",
      "?3 ~~ ?7",
      "Π(f: ?2) ->
  (closure: Π(x: (?3 :: Type)) ->
    Π(y: (?4 :: Type)) -> (?8 :: Type) -| Γ: f; flip) ~~ ?1",
      "Π(a: ?10) ->
  (closure: Π(b: (?11 :: Type)) -> (?10 :: Type) -| Γ: a; const; flip) ~~ ?9",
      "?13 @ Type",
      "?14 @ Type",
      "?15 @ Type",
      "?16 @ Type",
      "?17 @ Type",
      "Π(a: ?16) -> (closure: Π(b: b) -> a -| Γ: a; b; a; const; flip) ~~ Π(x: ?13) -> (closure: Π(x: b) -> c -| Γ: x; c; b; a; flip)",
      "Num ~~ ?14",
      "String ~~ ?13",
      "?15 ~~ ?12",
    ],
    "term": "{
  let flip
    : Π(a: Type) =>
      (closure: Π(b: Type) =>
        Π(c: Type) =>
          Π(f: Π(x: a) -> Π(x: b) -> c) ->
            Π(x: b) -> Π(y: a) -> c -| Γ: a; flip)
    = λ(a: Type) =>
      λ(b: Type) =>
        λ(c: Type) =>
          (λ(f: Π(x: a) -> Π(x: b) -> c) ->
            (λ(x: b) -> (λ(y: a) -> f y x : Π(y: a) -> c) : Π(x: b) ->
              Π(y: a) -> c) : Π(f: Π(x: a) -> Π(x: b) -> c) ->
            Π(x: b) -> Π(y: a) -> c);
  let const
    : Π(a: Type) =>
      (closure: Π(b: Type) => Π(a: a) -> Π(b: b) -> a -| Γ: a; const; flip)
    = λ(a: Type) =>
      λ(b: Type) =>
        (λ(a: a) -> (λ(b: b) -> a : Π(b: b) -> a) : Π(a: a) -> Π(b: b) -> a);
  let result
    : String
    = flip @String @Num @String (const @String @Num) 5 "hello";
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > basic polymorphic let bindings > polymorphic hof applied to row literals 1`] = `
{
  "displays": {
    "constraints": [
      "?2 ~~ Π(x: ?4) -> (closure: (?5 :: Type) -| Γ: x; x; f; apply)",
      "?3 ~~ ?4",
      "Π(f: ?2) -> (closure: Π(x: (?3 :: Type)) -> (?5 :: Type) -| Γ: f; apply) ~~ ?1",
      "Π(y: ?7) -> (closure: (?7 :: Type) -| Γ: y; id; apply) ~~ ?6",
      "?9 @ Type",
      "?10 @ Type",
      "?11 @ Type",
      "Π(y: ?11) -> (closure: a -| Γ: y; a; id; apply) ~~ Π(x: ?9) -> (closure: b -| Γ: x; b; a; apply)",
      "Type ~~ ?12",
      "Row ~~ ?9",
      "?10 ~~ ?8",
    ],
    "term": "{
  let apply
    : Π(a: Type) =>
      (closure: Π(b: Type) => Π(f: Π(x: a) -> b) -> Π(x: a) -> b -| Γ: a; apply)
    = λ(a: Type) =>
      λ(b: Type) =>
        (λ(f: Π(x: a) -> b) -> (λ(x: a) -> f x : Π(x: a) -> b) : Π(f: Π(x: a) ->
          b) ->
          Π(x: a) -> b);
  let id
    : Π(a: Type) => (closure: Π(y: a) -> a -| Γ: a; id; apply)
    = λ(a: Type) => (λ(y: a) -> y : Π(y: a) -> a);
  let result : Row = apply @Row @Row (id @Row) [ bar: Num ];
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > basic polymorphic let bindings > polymorphic identity function used at different types 1`] = `
{
  "displays": {
    "constraints": [
      "Π(x: ?2) -> (closure: (?2 :: Type) -| Γ: x; id) ~~ ?1",
      "?4 @ Type",
      "Num ~~ ?4",
      "?4 ~~ ?3",
      "?6 @ Type",
      "String ~~ ?6",
      "?6 ~~ ?5",
    ],
    "term": "{
  let id
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; id)
    = λ(a: Type) => (λ(x: a) -> x : Π(x: a) -> a);
  let a : Num = id @Num 5;
  let b : String = id @String "hello";
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > basic polymorphic let bindings > polymorphic thrush (T combinator) 1`] = `
{
  "displays": {
    "constraints": [
      "?3 ~~ Π(x: ?4) -> (closure: (?5 :: Type) -| Γ: x; f; x; thrush)",
      "?2 ~~ ?4",
      "Π(x: ?2) -> (closure: Π(f: (?3 :: Type)) -> (?5 :: Type) -| Γ: x; thrush) ~~ ?1",
      "Π(n: ?7) -> (closure: (?7 :: Type) -| Γ: n; id; thrush) ~~ ?6",
      "?9 @ Type",
      "?10 @ Type",
      "Num ~~ ?9",
      "?11 @ Type",
      "Π(n: ?11) -> (closure: a -| Γ: n; a; id; thrush) ~~ Π(x: ?9) -> (closure: b -| Γ: x; x; b; a; thrush)",
      "?10 ~~ ?8",
    ],
    "term": "{
  let thrush
    : Π(a: Type) =>
      (closure: Π(b: Type) =>
        Π(x: a) -> Π(f: Π(x: a) -> b) -> b -| Γ: a; thrush)
    = λ(a: Type) =>
      λ(b: Type) =>
        (λ(x: a) ->
          (λ(f: Π(x: a) -> b) -> f x : Π(f: Π(x: a) -> b) -> b) : Π(x: a) ->
          Π(f: Π(x: a) -> b) -> b);
  let id
    : Π(a: Type) => (closure: Π(n: a) -> a -| Γ: a; id; thrush)
    = λ(a: Type) => (λ(n: a) -> n : Π(n: a) -> a);
  let result : Num = thrush @Num @Num 5 (id @Num);
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > basic polymorphic let bindings > polymorphic warbler (W combinator) 1`] = `
{
  "displays": {
    "constraints": [
      "?2 ~~ Π(x: ?4) -> (closure: (?5 :: Type) -| Γ: x; x; f; warbler)",
      "?3 ~~ ?4",
      "?5 ~~ Π(x: ?6) -> (closure: (?7 :: Type) -| Γ: x; x; f; warbler)",
      "?3 ~~ ?6",
      "Π(f: ?2) -> (closure: Π(x: (?3 :: Type)) -> (?7 :: Type) -| Γ: f; warbler) ~~ ?1",
      "Π(a: ?9) ->
  (closure: Π(b: (?10 :: Type)) -> (?9 :: Type) -| Γ: a; const; warbler) ~~ ?8",
      "?12 @ Type",
      "?13 @ Type",
      "?14 @ Type",
      "?15 @ Type",
      "Π(a: ?14) -> (closure: Π(b: b) -> a -| Γ: a; b; a; const; warbler) ~~ Π(x: ?12) -> (closure: Π(x: a) -> b -| Γ: x; b; a; warbler)",
      "Num ~~ ?12",
      "?13 ~~ ?11",
    ],
    "term": "{
  let warbler
    : Π(a: Type) =>
      (closure: Π(b: Type) =>
        Π(f: Π(x: a) -> Π(x: a) -> b) -> Π(x: a) -> b -| Γ: a; warbler)
    = λ(a: Type) =>
      λ(b: Type) =>
        (λ(f: Π(x: a) -> Π(x: a) -> b) ->
          (λ(x: a) -> f x x : Π(x: a) -> b) : Π(f: Π(x: a) -> Π(x: a) -> b) ->
          Π(x: a) -> b);
  let const
    : Π(a: Type) =>
      (closure: Π(b: Type) => Π(a: a) -> Π(b: b) -> a -| Γ: a; const; warbler)
    = λ(a: Type) =>
      λ(b: Type) =>
        (λ(a: a) -> (λ(b: b) -> a : Π(b: b) -> a) : Π(a: a) -> Π(b: b) -> a);
  let result : Num = warbler @Num @Num (const @Num @Num) 42;
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > edge cases > let with unused polymorphic binding 1`] = `
{
  "displays": {
    "constraints": [
      "Π(x: ?2) -> (closure: (?2 :: Type) -| Γ: x; id) ~~ ?1",
      "Num ~~ ?3",
    ],
    "term": "{
  let id
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; id)
    = λ(a: Type) => (λ(x: a) -> x : Π(x: a) -> a);
  let result : Num = 42;
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > edge cases > multiple sequential polymorphic lets 1`] = `
{
  "displays": {
    "constraints": [
      "Π(x: ?2) -> (closure: (?2 :: Type) -| Γ: x; id1) ~~ ?1",
      "Π(y: ?4) -> (closure: (?4 :: Type) -| Γ: y; id2; id1) ~~ ?3",
      "Π(z: ?6) -> (closure: (?6 :: Type) -| Γ: z; id3; id2; id1) ~~ ?5",
      "?8 @ Type",
      "Num ~~ ?8",
      "?8 ~~ ?7",
      "?10 @ Type",
      "Bool ~~ ?10",
      "?10 ~~ ?9",
      "?12 @ Type",
      "Num ~~ ?12",
      "?12 ~~ ?11",
    ],
    "term": "{
  let id1
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; id1)
    = λ(a: Type) => (λ(x: a) -> x : Π(x: a) -> a);
  let id2
    : Π(a: Type) => (closure: Π(y: a) -> a -| Γ: a; id2; id1)
    = λ(a: Type) => (λ(y: a) -> y : Π(y: a) -> a);
  let id3
    : Π(a: Type) => (closure: Π(z: a) -> a -| Γ: a; id3; id2; id1)
    = λ(a: Type) => (λ(z: a) -> z : Π(z: a) -> a);
  let a : Num = id1 @Num 1;
  let b : Bool = id2 @Bool true;
  let c : Num = id3 @Num 42;
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > edge cases > polymorphic let returning polymorphic function 1`] = `
{
  "displays": {
    "constraints": [
      "Π(u: ?2) -> (closure: Π(x: (?3 :: Type)) -> (?3 :: Type) -| Γ: u; makeId) ~~ ?1",
      "?5 @ Type",
      "?6 @ Type",
      "Num ~~ ?5",
      "Π(x: ?6) -> (closure: b -| Γ: x; u; b; a; makeId) ~~ ?4",
      "?8 @ Type",
      "?9 @ Type",
      "Bool ~~ ?8",
      "Π(x: ?9) -> (closure: b -| Γ: x; u; b; a; makeId) ~~ ?7",
      "?11 @ Type",
      "String ~~ ?11",
      "?11 ~~ ?10",
      "?13 @ Type",
      "String ~~ ?13",
      "?13 ~~ ?12",
    ],
    "term": "{
  let makeId
    : Π(a: Type) =>
      (closure: Π(b: Type) => Π(u: a) -> Π(x: b) -> b -| Γ: a; makeId)
    = λ(a: Type) =>
      λ(b: Type) =>
        (λ(u: a) -> (λ(x: b) -> x : Π(x: b) -> b) : Π(u: a) -> Π(x: b) -> b);
  let id1
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; id1; makeId)
    = λ(a: Type) => id1 @Num @a 1;
  let id2
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; id2; id1; makeId)
    = λ(a: Type) => id1 @Bool @a true;
  let a : String = id1 @String "hello";
  let b : String = id2 @String "world";
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > let-polymorphism scope and capture > let-bound closure capturing polymorphic function 1`] = `
{
  "displays": {
    "constraints": [
      "Π(x: ?2) -> (closure: (?2 :: Type) -| Γ: x; id) ~~ ?1",
      "?5 @ Type",
      "?4 ~~ ?5",
      "Π(y: ?4) -> (closure: (?5 :: Type) -| Γ: y; makeApply; id) ~~ ?3",
      "?7 @ Type",
      "Num ~~ ?7",
      "?7 ~~ ?6",
      "?9 @ Type",
      "String ~~ ?9",
      "?9 ~~ ?8",
    ],
    "term": "{
  let id
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; id)
    = λ(a: Type) => (λ(x: a) -> x : Π(x: a) -> a);
  let makeApply
    : Π(a: Type) => (closure: Π(y: a) -> a -| Γ: a; makeApply; id)
    = λ(a: Type) => (λ(y: a) -> makeApply @a y : Π(y: a) -> a);
  let a : Num = makeApply @Num 5;
  let b : String = makeApply @String "hello";
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > let-polymorphism scope and capture > polymorphic let in nested scope 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?1",
      "Π(x: ?4) -> (closure: (?4 :: Type) -| Γ: x; poly; inner; outer) ~~ ?3",
      "?6 @ Type",
      "Num ~~ ?6",
      "?6 ~~ ?5",
      "?8 @ Type",
      "String ~~ ?8",
      "?8 ~~ ?7",
      "?9 @ Type",
      "Π(x: ?9) -> (closure: a -| Γ: x; a; poly; inner; outer) ~~ ?2",
    ],
    "term": "{
  let outer : Num = 42;
  let inner
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; inner; outer)
    = λ(a: Type) =>
      ({
        let poly
          : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; poly; inner; outer)
          = λ(a: Type) => (λ(x: a) -> x : Π(x: a) -> a);
        let a : Num = poly @Num inner;
        let b : String = poly @String "test";
        return poly;
      })
        @a;
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > let-polymorphism with complex types > polymorphic function with projection 1`] = `
{
  "displays": {
    "constraints": [
      "Schema [ x: ?3 | ?4 ] ~~ ?2",
      "Π(p: ?2) -> (closure: (?3 :: Type) -| Γ: p; fst) ~~ ?1",
      "Num ~~ ?7",
      "Num ~~ ?6",
      "Schema [ x: Num, y: Num ] ~~ ?5",
      "Bool ~~ ?10",
      "Bool ~~ ?9",
      "Schema [ x: Bool, y: Bool ] ~~ ?8",
      "?12 @ Row",
      "?13 @ Type",
      "Schema [ x: Num, y: Num ] ~~ Schema [ x: ?13 | ?12 ]",
      "?13 ~~ ?11",
      "?15 @ Row",
      "?16 @ Type",
      "Schema [ x: Bool, y: Bool ] ~~ Schema [ x: ?16 | ?15 ]",
      "?16 ~~ ?14",
    ],
    "term": "{
  let fst
    : Π(r: Row) =>
      (closure: Π(a: Type) => Π(p: Schema [ x: a | r ]) -> a -| Γ: r; fst)
    = λ(r: Row) =>
      λ(a: Type) =>
        (λ(p: Schema [ x: a | r ]) -> (p).x : Π(p: Schema [ x: a | r ]) -> a);
  let val1 : Schema [ x: Num, y: Num ] = Struct [ x: 1, y: 2 ];
  let val2 : Schema [ x: Bool, y: Bool ] = Struct [ x: true, y: false ];
  let a : Num = fst @[ y: Num ] @Num val1;
  let b : Bool = fst @[ y: Bool ] @Bool val2;
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > let-polymorphism with complex types > polymorphic function with struct values 1`] = `
{
  "displays": {
    "constraints": [
      "Schema [ name: ?3 | ?4 ] ~~ ?2",
      "Π(obj: ?2) -> (closure: (?3 :: Type) -| Γ: obj; getName) ~~ ?1",
      "?6 @ Row",
      "?7 @ Type",
      "String ~~ ?7",
      "?7 ~~ ?8",
      "[] ~~ [ | ?6 ]",
      "?7 ~~ ?5",
      "?10 @ Row",
      "?11 @ Type",
      "String ~~ ?11",
      "?11 ~~ ?12",
      "Num ~~ ?13",
      "[ age: Num ] ~~ [ | ?10 ]",
      "?11 ~~ ?9",
    ],
    "term": "{
  let getName
    : Π(r: Row) =>
      (closure: Π(a: Type) =>
        Π(obj: Schema [ name: a | r ]) -> a -| Γ: r; getName)
    = λ(r: Row) =>
      λ(a: Type) =>
        (λ(obj: Schema [ name: a | r ]) -> (obj).name : Π(obj: Schema
          [ name: a | r ]) ->
          a);
  let alice : String = getName @[] @String (Struct [ name: "Alice" ]);
  let bob
    : String
    = getName @[ age: Num ] @String (Struct [ name: "Bob", age: 30 ]);
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > nested let bindings > nested polymorphic lets 1`] = `
{
  "displays": {
    "constraints": [
      "Π(y: ?4) -> (closure: (?4 :: Type) -| Γ: y; inner; x; outer) ~~ ?3",
      "?6 @ Type",
      "?2 ~~ ?6",
      "?6 ~~ ?5",
      "?8 @ Type",
      "Num ~~ ?8",
      "?8 ~~ ?7",
      "Π(x: ?2) -> (closure: Unit -| Γ: x; outer) ~~ ?1",
    ],
    "term": "{
  let outer
    : Π(a: Type) => (closure: Π(x: a) -> Unit -| Γ: a; outer)
    = λ(a: Type) =>
      (λ(x: a) ->
        {
          let inner
            : Π(a: Type) => (closure: Π(y: a) -> a -| Γ: a; inner; x; outer)
            = λ(a: Type) => (λ(y: a) -> y : Π(y: a) -> a);
          let x2 : a = inner @a x;
          let n : Num = inner @Num 42;
          return unit;
        } : Π(x: a) -> Unit);
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > nested let bindings > shadowing polymorphic lets 1`] = `
{
  "displays": {
    "constraints": [
      "Π(x: ?2) -> (closure: (?2 :: Type) -| Γ: x; id) ~~ ?1",
      "?4 @ Type",
      "Num ~~ ?4",
      "?4 ~~ ?3",
      "Π(y: ?6) -> (closure: (?6 :: Type) -| Γ: y; id; a; id) ~~ ?5",
      "?8 @ Type",
      "String ~~ ?8",
      "?8 ~~ ?7",
    ],
    "term": "{
  let id
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; id)
    = λ(a: Type) => (λ(x: a) -> x : Π(x: a) -> a);
  let a : Num = id @Num 5;
  let id
    : Π(a: Type) => (closure: Π(y: a) -> a -| Γ: a; id; a; id)
    = λ(a: Type) => (λ(y: a) -> y : Π(y: a) -> a);
  let b : String = id @String "hello";
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > polymorphism on block scope > polymorphic return value on non resolved implicit 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Num ~~ Num",
      "?2 @ Num",
      "Num ~~ Num",
      "?3 @ Num",
      "Num ~~ ?1",
    ],
    "term": "{
  let p
    : Π(A: Num) => (closure: Num -| Γ: A; p)
    = λ(A: Num) =>
      ({
        let f
          : Π(i: Num) => (closure: Π(t1: Num) -> Num -| Γ: i; p)
          = λ(i: Num) => λ(x: Num) -> x;
        return λ(A: Num) => f @A 1;
      })
        @A;
  return p;
}",
    "type": "Π(A: Num) => (closure: Num -| Γ: A; p)",
  },
}
`;

exports[`Let-polymorphism > recursive bindings > recursive function with polymorphic usage 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?4) -> (closure: (?5 :: Type) -| Γ: x; y; x; rec)",
      "?2 ~~ ?4",
      "?5 ~~ Π(x: ?6) -> (closure: (?7 :: Type) -| Γ: x; y; x; rec)",
      "?3 ~~ ?6",
      "Π(x: ?2) -> (closure: Π(y: (?3 :: Type)) -> (?7 :: Type) -| Γ: x; rec) ~~ ?1",
      "?9 @ Type",
      "?10 @ Type",
      "?11 @ Type",
      "Num ~~ ?9",
      "Π(x: ?10) -> (closure: c -| Γ: x; x; c; b; a; rec) ~~ ?8",
    ],
    "term": "{
  let rec
    : Π(a: Type) =>
      (closure: Π(b: Type) =>
        Π(c: Type) => Π(x: a) -> Π(x: b) -> c -| Γ: a; rec)
    = λ(a: Type) =>
      λ(b: Type) =>
        λ(c: Type) =>
          (λ(x: a) -> (λ(y: b) -> c x y : Π(y: b) -> c) : Π(x: a) ->
            Π(y: b) -> c);
  let r
    : Π(a: Type) => (closure: Π(b: Type) => Π(x: a) -> b -| Γ: a; r; rec)
    = λ(a: Type) => λ(b: Type) => a @Num @a @b 5;
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Let-polymorphism > recursive bindings > simple recursive function 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?3) -> (closure: (?4 :: Type) -| Γ: x; x; rec)",
      "?2 ~~ ?3",
      "Π(x: ?2) -> (closure: (?4 :: Type) -| Γ: x; rec) ~~ ?1",
    ],
    "term": "{
  let rec
    : Π(a: Type) => (closure: Π(b: Type) => Π(x: a) -> b -| Γ: a; rec)
    = λ(a: Type) => λ(b: Type) => (λ(x: a) -> b x : Π(x: a) -> b);
  return unit;
}",
    "type": "Unit",
  },
}
`;
